--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
       <div class="left">
       <label for="fotoUpload">Fotos hinzufügen</label>
-      <input type="file" id="fotoUpload" required>
+      <input type="file" id="fotoUpload" accept="image/*" required>
       </div>
 
       <div class="left">
       <label for="lageplanLink">Lageplan auswählen</label>
-      <input type="file" id="lageplanLink">
+      <input type="file" id="lageplanLink" accept="application/pdf">
       </div>
 
       <button type="submit" id="submitMangel" class="buttonClass">Teilen</button>
